[gd_scene load_steps=13 format=3 uid="uid://qcytr2ls5u1j"]

[ext_resource type="Script" uid="uid://b58jknnu4l5ci" path="res://scenes/main.gd" id="1_fu8cd"]
[ext_resource type="PackedScene" uid="uid://bwvh2hj6tjfxm" path="res://scenes/pipe.tscn" id="2_ob4pe"]
[ext_resource type="PackedScene" uid="uid://c7nv7ncteshuk" path="res://scenes/bird.tscn" id="3_ifpwd"]
[ext_resource type="Texture2D" uid="uid://cam47024xo2e5" path="res://assets/background.jpeg" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://bexxm8pecc72y" path="res://scenes/flag.tscn" id="3_tipki"]
[ext_resource type="PackedScene" uid="uid://lrvhatdqjims" path="res://scenes/ground.tscn" id="4_y2qli"]
[ext_resource type="FontFile" uid="uid://c0h6f046scs2c" path="res://assets/Minecraft.ttf" id="6_p3mdx"]
[ext_resource type="PackedScene" uid="uid://bxfou50csg83m" path="res://scenes/gameover.tscn" id="7_wvrkh"]
[ext_resource type="AudioStream" uid="uid://ckt4vya4k5jvy" path="res://assets/little-archemist_loop.ogg" id="9_85g3d"]
[ext_resource type="AudioStream" uid="uid://cq4lix6m36mm5" path="res://assets/ボヨン.mp3" id="10_choun"]
[ext_resource type="AudioStream" uid="uid://cp45h2q5w5xkm" path="res://assets/ペタッ.mp3" id="11_ya4ey"]
[ext_resource type="AudioStream" uid="uid://b5ykjjam1ge5c" path="res://assets/バーン.mp3" id="12_eb6dy"]

[node name="main" type="Node" node_paths=PackedStringArray("jump_se", "flag_se", "hit_se")]
script = ExtResource("1_fu8cd")
pipe_scene = ExtResource("2_ob4pe")
flag_scene = ExtResource("3_tipki")
jump_se = NodePath("Jump")
flag_se = NodePath("flag")
hit_se = NodePath("hit")

[node name="background" type="Sprite2D" parent="."]
self_modulate = Color(0.585062, 0.585062, 0.585062, 1)
position = Vector2(488, 435)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_o6xl0")

[node name="bird" parent="." instance=ExtResource("3_ifpwd")]

[node name="ground" parent="." instance=ExtResource("4_y2qli")]
z_index = 1

[node name="pipetimer" type="Timer" parent="."]
wait_time = 1.5

[node name="scorelabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_top = 26.0
offset_right = 129.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_p3mdx")
theme_override_font_sizes/font_size = 60
text = "SCORE : 0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="gameover" parent="." instance=ExtResource("7_wvrkh")]

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_85g3d")
autoplay = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_choun")
volume_db = 10.0

[node name="flag" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ya4ey")
volume_db = 12.0

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_eb6dy")
volume_db = 10.0

[connection signal="hit" from="ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="pipetimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="gameover" to="." method="_on_gameover_restart"]
